--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-<p> Goodnight baby
+<p align="right">Per as perum ad astra
+<h1>align="blue
+    align="center"
+</h1>
+</p>
 </body>
 </html>
 </html>
