--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<p align="right">Per as perum ad astra
-<h1>align="blue
-    align="center"
-</h1>
-</p>
+<p>Per asperum ad astra</p>
+<h1>align="center"</h1>
 </body>
 </html>
 </html>
