--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
- <p>Per asperum ad astra</p>
-  <h1>align="center"</h1>
+ <p>Dobroy nochi</p>
+<h1>align="center"</h1>
+
+<hr size="30" width="50%" shade="20">
+
 </body>
 </html>
 </html>
