--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
  <p>Dobroy nochi</p>
-<h1>align="center"</h1>
-
-<hr size="30" width="50%" shade="20">
-
+ <h1>align="center"</h1>
+ <hr size="30" width="50%" shade="20">
+ <img src="img/cat.jpeg" alt="test pictureimgimg">
 </body>
 </html>
 </html>
