--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <p>Dobroy nochi</p>
-  <h1>align="center"</h1>
+  <header>align="center"</header>
   <hr size="30" width="50%" shade="20">
  <img src="img/cat.jpeg" alt="test pictureimgimg">
 </body>
