--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
+  <head>
+      <title>Main</title>
+ </head>
 <body>
- <p>Dobroy nochi</p>
-  <header>align="center"</header>
-  <hr size="30" width="50%" shade="20">
- <img src="img/cat.jpeg" alt="test pictureimgimg">
+   <p>Dobroy nochi</p>
+   <h1> align="center"</h1>
+<hr size="30" width="50%" shade="20">
+  <img src="img/cat.jpeg" alt="test pictureimgimg">
 </body>
-</html>
 </html>
