--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </head>
 <body>
  <p>Dobroy nochi</p>
- <hr size="30" width="50%" shade="20">
+ <h1>size="45"</h1>
  <img src="img/cat.jpeg" alt="test pictureimgimg">
 </body>
 </html>
