--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  </head>
 <body>
  <p>Dobroy nochi</p>
- <h1>size="45"</h1>
+ <h1> align="center">slafkih snov</h1>
+ <h2> align="justify">test</h2></h2>
  <img src="img/cat.jpeg" alt="test pictureimgimg">
 </body>
 </html>
