--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Main</title>
+ <head>
+    <title>Dobroy nochi!!</title>
  </head>
-<body>
- <p>Dobroy nochi</p>
- <h1> align="center">slafkih snov</h1>
- <h2> align="justify">test</h2></h2>
- <img src="img/cat.jpeg" alt="test pictureimgimg">
-</body>
+ <body>
+    <p>Dobroy nochki!</p>
+    <h1>align="center"</h1>
+    <img src="img/cat.jpeg" alt="test img">
+ </body>
 </html>
