--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <title>Dobroy nochi!!</title>
+     <title>:)</title>
  </head>
  <body>
     <p>Dobroy nochki!</p>
