--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
      <title>:)</title>
  </head>
  <body>
-    <p>Dobroy nochki!</p>
-     <p>align="center"</p>
-    <p>Mirumir</p>
-     <p>align="justify"</p>
+    <p> align="center">Dobroy nochki!</p>
     <img src="img/cat.jpeg" alt="test img">
  </body>
+ <footer>
+     <p>Pisit' i SPaat!</p> 
+ </footer>
 </html>
