--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  </head>
  <body>
     <p> align="center">Dobroy nochki!</p>
+    <p>Mirumir a ne miru pipiska</p>
     <img src="img/cat.jpeg" alt="test img">
  </body>
  <footer>
