--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
      <title>:)</title>
  </head>
  <body>
-    <p> align="center">Dobroy nochki!</p>
-    <p>Mirumir a ne miru pipiska</p>
+    <p align="center">Dobroy nochki!</p>
+    <p align="center">Mirumir a ne miru pipiska</p>
     <img src="img/cat.jpeg" alt="test img">
  </body>
  <footer>
