--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
      <p align="center">Dobroy nochki!</p>
      <p align="center">Mirumir a ne miru pipiska</p>
-     <img src="img/cat.jpeg" alt="test img">
+     <img align="center" src="img/cat.jpeg" alt="test img">
  </body>
  <footer>
      <p>Pisit' i SPaat!</p> 
