--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
  </head>
  <body>
      <p align="center">Dobroy nochki!</p>
-     <p align="center">Mirumir a ne miru pipiska</p>
-     <img align="center" src="img/cat.jpeg" alt="test img">
+     <p align="center">Mirumir a ne miru ne mir</p>
+     <img src="img/cat.jpeg" alt="test img">
  </body>
  <footer>
-     <p>Pisit' i SPaat!</p> 
+     <p> Goodnight sweet dreams</p>
  </footer>
 </html>
