--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
  <body>
      <p align="center">Dobroy nochki!</p>
      <p align="center">Mirumir a ne miru ne mir</p>
-     <img align="center"><src="img/cat.jpeg" alt="test img">
+     <img src="img/cat.jpeg" alt="test img">
  </body>
  <footer>
-     <p> Goodnight sweet dreams</p>
+     <p> Pust tebe prisnitsa shocoladka</p>
  </footer>
 </html>
