--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
      <link rel="stylesheet" href="style.css">
  </head>
  <body>
-     <p align="center">Dobroy nochki!</p>
-     <p align="center">Mirumir a ne miru ne mir</p>
-     <img src="img/cat.jpeg" alt="test img">
-     <ul>
+     <p align="center">Monte Cristo-Style Ham Sandwich</p>
+     <p align="center">This is a perfect way to use up leftover ham from holiday meals!</p>
+    <img src="img/receipt.webp" alt="test">
+     ul>
          <li>In a medium-sized shallow dish crack eggs and whisk to break up the yolks. Add the milk or water and salt and whisk until fully combined.</li>
          <li>Lay the bottom slices of bread on your work surface and coat with mayonnaise.        </li>
          <li>Add 30 g of cheese and spread evenly across the bread. Lay the ham slices on top of the cheese. Add the next 30 g of cheese on top of the ham.        </li>
@@ -17,6 +17,6 @@
      </ul>
  </body>
  <footer>
-     <p> Pust tebe prisnitsa shocoladka</p>
+     <p> </p>
  </footer>
 </html>
