--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <p align="center">Monte Cristo-Style Ham Sandwich</p>
      <p align="center">This is a perfect way to use up leftover ham from holiday meals!</p>
     <img src="img/receipt.webp" alt="test">
+    <div class="hline"><width:20><height:1px></height:1px></width:20></div>
     <p>MONTE CRISTO STYLE HAM SANDWICH
     <p>This is a filling sandwich. You could even make it for dinner with a side salad. Or brunch with a sweet glaze.</p>
     <p>INGREDIENTS</p>
