--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
  <head>
-     <title>:)</title>
+     <title>receipt</title>
      <link rel="stylesheet" href="style.css">
  </head>
  <body>
-     <p align="center">Monte Cristo-Style Ham Sandwich</p>
-     <p align="center">This is a perfect way to use up leftover ham from holiday meals!</p>
+   <h1> 
+     <p>Monte Cristo-Style Ham Sandwich</p> 
+    </h1> 
+   <h2> 
+      <p>This is a perfect way to use up leftover ham from holiday meals!</p> 
+    </h2>
     <img src="img/receipt.webp" alt="test">
     <div class="hline"><width:20><height:1px></height:1px></width:20></div>
     <p>MONTE CRISTO STYLE HAM SANDWICH
