--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <p>Monte Cristo-Style Ham Sandwich</p> 
     </h1> 
    <h2> 
-      <p>This is a perfect way to use up leftover ham from holiday meals!</p> 
+      <p>This is a perfect way to use up<span>leftover ham</span>from holiday meals!</p> 
     </h2>
     <img src="img/receipt.webp" alt="test">
     <div class="hline"><width:20><height:1px></height:1px></width:20></div>
