--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    <h2> 
       <p>This is a perfect way to use up <span>leftover ham</span>from holiday meals!</p> 
     </h2>
-    <img src="img/receipt.webp" alt="test">
+     <img src="img/receipt.webp" alt="test">
+    <a/href="forms.html">Forms page</a>
     <div class="hline"><width:20><height:1px></height:1px></width:20></div>
     <p>MONTE CRISTO STYLE HAM SANDWICH
         <p>This is a filling sandwich. You could even make it for dinner with a side salad. Or brunch with a sweet glaze.</p>
