--- a/forms.html
+++ b/forms.html
@@ -1,1 +1,12 @@
-pjkjjbjb
+
+
+<head>
+    <meta charset="UTF-8">
+
+</head>
+<body>
+    <input type="text" placeholder="Fill in your name" name="firstname" required>
+    <input type="submit"
+</body>
+
+
