--- a/forms.html
+++ b/forms.html
@@ -5,8 +5,11 @@
 
 </head>
 <body>
-    <input type="text" placeholder="Fill in your name" name="firstname" required>
-    <input type="submit"
+    <p>Тема занятия: Формы</p>
+    <p>Я изучаю верстку форм на HTML</p>
+    <form action="" method="post">
+    <input type="text" placeholder="Введите фамилию" name="Фамилия" required>
+    <input type="text" placeholder="Введите имя" name="Имя" required>
 </body>
 
 
