--- a/forms.html
+++ b/forms.html
@@ -8,8 +8,18 @@
     <p>Тема занятия: Формы</p>
     <p>Я изучаю верстку форм на HTML</p>
     <form action="" method="post">
+     <p>Фамилия</p>
     <input type="text" placeholder="Введите фамилию" name="Фамилия" required>
+    <p>Имя</p>
     <input type="text" placeholder="Введите имя" name="Имя" required>
+    <p>"Электронная почта</p>
+    <input type="text" placeholder="Введите почту" name="Электронная почта" required>
+    <p>Школа и класс</p>
+    <input type="text" placeholder="Введите школу и класс" name="Школа и класс" required>
+    <p>Курс</p>
+    <input type="text" placeholder="Курс" name="Web конструирование" required>
+     <p>Группа</p>
+     <input type="text" placeholder="Группа" name="Введите номер группы" required>
 </body>
 
 
