--- a/forms.html
+++ b/forms.html
@@ -12,7 +12,7 @@
     <input type="text" placeholder="Введите фамилию" name="Фамилия" required>
     <p>Имя</p>
     <input type="text" placeholder="Введите имя" name="Имя" required>
-    <p>"Электронная почта</p>
+    <p>Электронная почта</p>
     <input type="text" placeholder="Введите почту" name="Электронная почта" required>
     <p>Школа и класс</p>
     <input type="text" placeholder="Введите школу и класс" name="Школа и класс" required>
@@ -20,6 +20,7 @@
     <input type="text" placeholder="Курс" name="Web конструирование" required>
      <p>Группа</p>
      <input type="text" placeholder="Группа" name="Введите номер группы" required>
+     <p><input type="submit" name="button"></p>
 </body>
 
 
