--- a/forms.html
+++ b/forms.html
@@ -17,7 +17,7 @@
     <p>Школа и класс</p>
     <input type="text" placeholder="Введите школу и класс" name="Школа и класс" required>
     <p>Курс</p>
-    <input type="text" placeholder="Курс" name="Web конструирование" required>
+    <input type="text" placeholder="Курс" name="cource-type" value="HTML-CSS" readonly size="30" required>
      <p>Группа</p>
      <input type="text" placeholder="Группа" name="Введите номер группы" required>
      <p><input type="submit" name="button"></p>
