--- a/forms.html
+++ b/forms.html
@@ -9,17 +9,17 @@
     <p>Я изучаю верстку форм на HTML</p>
     <form action="" method="post">
      <p>Фамилия</p>
-    <input type="text" placeholder="Введите фамилию" name="Фамилия" required>
+    <input type="text" placeholder="Введите фамилию" name="Фамилия" readonly size="30" required>
     <p>Имя</p>
-    <input type="text" placeholder="Введите имя" name="Имя" required>
+    <input type="text" placeholder="Введите имя" name="Имя"  readonly size="30" required>
     <p>Электронная почта</p>
-    <input type="text" placeholder="Введите почту" name="Электронная почта" required>
+    <input type="text" placeholder="Введите почту" name="Электронная почта"  readonly size="30" required>
     <p>Школа и класс</p>
-    <input type="text" placeholder="Введите школу и класс" name="Школа и класс" required>
+    <input type="text" placeholder="Введите школу и класс" name="Школа и класс" readonly size="30" required>
     <p>Курс</p>
     <input type="text" placeholder="Курс" name="cource-type" value="HTML-CSS" readonly size="30" required>
      <p>Группа</p>
-     <input type="text" placeholder="Группа" name="Введите номер группы" required>
+     <input type="text" placeholder="Группа" name="Введите номер группы"  readonly size="30" required>
      <p><input type="submit" name="button"></p>
 </body>
 
