--- a/forms.html
+++ b/forms.html
@@ -8,17 +8,17 @@
     <p>Тема занятия: Формы</p>
     <p>Я изучаю верстку форм на HTML</p>
     <form action="" method="post">
-     <p>Фамилия</p>
+     <p class="m0">Фамилия</p>
     <input type="text" placeholder="Введите фамилию" name="Фамилия" readonly size="30" required>
-    <p>Имя</p>
+    <p class="m0">Имя</p>
     <input type="text" placeholder="Введите имя" name="Имя"  readonly size="30" required>
-    <p>Электронная почта</p>
+    <p class="m0">Электронная почта</p>
     <input type="text" placeholder="Введите почту" name="Электронная почта"  readonly size="30" required>
-    <p>Школа и класс</p>
+    <p class="m0">Школа и класс</p>
     <input type="text" placeholder="Введите школу и класс" name="Школа и класс" readonly size="30" required>
-    <p>Курс</p>
+    <p class="m0">Курс</p>
     <input type="text" placeholder="Курс" name="cource-type" value="HTML-CSS" readonly size="30" required>
-     <p>Группа</p>
+     <p class="m0">Группа</p>
      <input type="text" placeholder="Группа" name="Введите номер группы"  readonly size="30" required>
      <p><input type="submit" name="button"></p>
 </body>
