--- a/forms.html
+++ b/forms.html
@@ -18,9 +18,12 @@
     <input type="text" placeholder="Введите школу и класс" name="Школа и класс" readonly size="30" required>
     <p class="m0">Курс</p>
     <input type="text" placeholder="Курс" name="cource-type" value="HTML-CSS" readonly size="30" required>
-     <p class="m0">Группа</p>
-     <input type="text" placeholder="Группа" name="Введите номер группы"  readonly size="30" required>
-     <p><input type="submit" name="button"></p>
+    <p class="m0">Группа</p>
+    <input type="text" placeholder="Группа" name="Введите номер группы"  readonly size="30" required>
+    <p><input type="submit" name="button"></p>
+    <select name="age" id="">
+        <option value="Сколько вам лет"></option>
+    </select>
 </body>
 
 
