--- a/forms.html
+++ b/forms.html
@@ -20,12 +20,16 @@
     <input type="text" placeholder="Курс" name="cource-type" value="HTML-CSS" readonly size="30" required>
     <p class="m0">Группа</p>
     <input type="text" placeholder="Группа" name="Введите номер группы"  readonly size="30" required>
-    <p><input type="submit" name="button"></p>
     <p>
         <select name="age" id="">
-            <option value="Сколько вам лет"></option>
-        </select>
+            <option value="Сколько вам лет" disabled selected>Сколько вам лет?</option>
+            <option value="18-25">18-25</option>
+            <option value="25-35">25-35</option>
+            <option value="35-45">35-45</option>
+         </select>
+         <textarea name="request" id="" cols="30" rows="10" placeholder="Введите свой вопрос"></textarea>
     </p>
+    <p><input type="submit" name="button"></p>
 </body>
 
 
