--- a/Forms2/form2.html
+++ b/Forms2/form2.html
@@ -4,4 +4,6 @@
 <body>
     <p>Мой любимый интерне-ресурс</p>
     <input type="text" placeholder="Введите веб-сайт" name="Вебсайт" readonly size="30" required>
+    <p>Мой любимый цвет</p>
+    <input type="color">
 </body>
