--- a/Forms2/form2.html
+++ b/Forms2/form2.html
@@ -6,4 +6,6 @@
     <input type="text" placeholder="Введите веб-сайт" name="Вебсайт" readonly size="30" required>
     <p>Мой любимый цвет</p>
     <input type="color">
+    <p>Дата рождения</p>
+    <input type="date"
 </body>
