--- a/Forms2/form2.html
+++ b/Forms2/form2.html
@@ -7,5 +7,6 @@
     <p>Мой любимый цвет</p>
     <input type="color">
     <p>Дата рождения</p>
-    <input type="date"
+    <input type="date">
+    <p><input type="Отправить" name="button"></p>
 </body>
