--- a/Forms2/form2.html
+++ b/Forms2/form2.html
@@ -8,5 +8,6 @@
     <input type="color">
     <p>Дата рождения</p>
     <input type="date">
+    <p>Отправить</p>
     <p><input type="Отправить" name="button"></p>
 </body>
