--- a/forms.html
+++ b/forms.html
@@ -1,8 +1,10 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <p>Тема занятия: Формы</p>
@@ -32,5 +34,4 @@
     </p>
     <p><input type="submit" name="button"></p>
 </body>
-
-
+</html>
