--- a/table.html
+++ b/table.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <table>
+        <caption>таблица 1 для чего-то она нужна</caption>
         <tr>
             <td>
               строка 1 столбец 1
