--- a/table.html
+++ b/table.html
@@ -10,6 +10,8 @@
     <table>
         <caption>таблица 1 для чего-то она нужна</caption>
         <tr>
+            <th>колонка 1</th>
+            <th>колонка 2</th>
             <td>
               строка 1 столбец 1
             </td>
