--- a/table.html
+++ b/table.html
@@ -12,9 +12,12 @@
         <tr>
             <th>колонка 1</th>
             <th>колонка 2</th>
-            <td>
-              строка 1 столбец 1
-            </td>
+            <tr>
+                <td>строка 1 столбец 1</td>
+                <td>строка 1 столбец 2</td>
+                <td>строка 1 столбец 3</td>
+            </tr>
+             
         </tr>
         <tr>
             <td>
