--- a/table.html
+++ b/table.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
-        <caption>таблица 1 для чего-то она нужна</caption>
+    <table frame="box">
+        <caption>таблица 1 для чего-то она нужна  'nj tt yfpdfybt</caption>
         <tr>
             <th>колонка 1</th>
             <th>колонка 2</th>
@@ -17,12 +17,14 @@
                 <td>строка 1 столбец 2</td>
                 <td>строка 1 столбец 3</td>
             </tr>
-             
         </tr>
         <tr>
             <td>
                 строка 2 столбец 2
             </td>
+        </tr>
+        <tr>
+            <td>строка 3 столбец 1</td>
         </tr>
     </table>
 </body>
