--- a/table.html
+++ b/table.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <table frame="box">
-        <caption>таблица 1 для чего-то она нужна  'nj tt yfpdfybt</caption>
+        <caption>таблица 1 для чего-то она нужна это ее название</caption>
         <tr>
             <th>колонка 1</th>
             <th>колонка 2</th>
             <tr>
-                <td>строка 1 столбец 1</td>
-                <td>строка 1 столбец 2</td>
-                <td>строка 1 столбец 3</td>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
             </tr>
         </tr>
         <tr>
             <td>
-                строка 2 столбец 2
+              <th>14</th> 
+              <th>15</th>
+              <th>16</th>
             </td>
         </tr>
         <tr>
