--- a/table.html
+++ b/table.html
@@ -12,21 +12,17 @@
         <tr>
             <th>колонка 1</th>
             <th>колонка 2</th>
-            <tr>
-                <td>11</td>
-                <td>12</td>
-                <td>13</td>
-            </tr>
+            <th>колонка 3</th>
         </tr>
         <tr>
-            <td>
               <th>14</th> 
               <th>15</th>
               <th>16</th>
-            </td>
         </tr>
         <tr>
-            <td>строка 3 столбец 1</td>
+            <td>17</td>
+            <td>18</td>
+            <td>19</td>
         </tr>
     </table>
 </body>
