--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
     <table frame="box">
         <caption>таблица 1 для чего-то она нужна это ее название</caption>
         <tr>
-            <th>колонка 1</th>
+            <th colspan="2" rowspan="2">колонка 1</th>
             <th>колонка 2</th>
             <th>колонка 3</th>
         </tr>
