--- a/table.html
+++ b/table.html
@@ -11,15 +11,15 @@
         <caption>таблица 1 для чего-то она нужна это ее название</caption>
         <tr>
             <th colspan="2" rowspan="2">колонка 1</th>
-            <th>колонка 2</th>
-            <th>колонка 3</th>
+            <th colspan="2" rowspan="2">колонка 2</th>
+            <th colspan="2" rowspan="2">колонка 3</th>
         </tr>
         <tr>
-             <td>11</td>
-             <td>12</td>
-             <td>13</td>
+             <td bgcolor="red">11</td>
+             <td bgcolor="green">12</td>
+             <td bgcolor="blue">13</td>
         </tr>
-        <tr>
+        <tr bgcolor="ebebeb">
               <td>17</td>
               <td>18</td>
               <td>19</td>
