--- a/table.html
+++ b/table.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Style.css/">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,7 @@
              <td bgcolor="blue">13</td>
         </tr>
         <tr bgcolor="ebebeb">
-              <td>17</td>
+              <td bgcolor="#fff000">17</td>
               <td>18</td>
               <td>19</td>
         </tr>
