--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
         <li>Gently place sandwiches in the egg mixture and turn to coat both sides. Add sandwich to the pan and cook 4 minutes on each side. Cheese should be fully melted and the outside toasty brown. Remove from frying pan. Continue with same procedure until all sandwiches are cooked. You can keep the sandwiches warm in the oven (on warm or the lowest temperature) while you cook the rest of the sandwiches.
         </li>
     </ul>
-    p>INSTRUCTIONS</p>
-    <table>
-        <li>In a medium-sized shallow dish crack eggs and whisk to break up the yolks. Add the milk or water and salt and whisk until fully combined.</li>
-        <li>Lay the bottom slices of bread on your work surface and coat with mayonnaise.</li>
-        <li>Add 30 g of cheese and spread evenly across the bread. Lay the ham slices on top of the cheese. Add the next 30 g of cheese on top of the ham.</li>
-        <li>Coat the top slice of bread with Dijon mustard and close sandwich.
-        </li>
-        <li>Preheat a large frying pan over medium heat. Add half the butter and olive oil to the pan.
-        </li>
-        <li>Gently place sandwiches in the egg mixture and turn to coat both sides. Add sandwich to the pan and cook 4 minutes on each side. Cheese should be fully melted and the outside toasty brown. Remove from frying pan. Continue with same procedure until all sandwiches are cooked. You can keep the sandwiches warm in the oven (on warm or the lowest temperature) while you cook the rest of the sandwiches.
-        </li>
+    <p> INSTRUCTIONS</p>
+    <table border="2">
+        <Caption>Cooking instruction</Caption>
+    In a medium-sized shallow dish crack eggs and whisk to break up the yolks. Add the milk or water and salt and whisk until fully combined.
+    Lay the bottom slices of bread on your work surface and coat with mayonnaise.
+    Add 30 g of cheese and spread evenly across the bread. Lay the ham slices on top of the cheese. Add the next 30 g of cheese on top of the ham.
+    Coat the top slice of bread with Dijon mustard and close sandwich.
+    Preheat a large frying pan over medium heat. Add half the butter and olive oil to the pan.
+    Gently place sandwiches in the egg mixture and turn to coat both sides. Add sandwich to the pan and cook 4 minutes on each side. Cheese should be fully melted and the outside toasty brown. Remove from frying pan. Continue with same procedure until all sandwiches are cooked. You can keep the sandwiches warm in the oven (on warm or the lowest temperature) while you cook the rest of the sandwiches.
     </table>
     <p>NOTES</p>
     <p>Sweet garnish options: bourbon maple syrup glaze and a dusting of powdered sugar
