--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
 <body>
     <table frame="box">
         <caption>таблица 1 для чего-то она нужна это ее название</caption>
-        <tr>
+        <tr bgcolor="red">
             <th colspan="2" rowspan="2">колонка 1</th>
             <th colspan="2" rowspan="2">колонка 2</th>
             <th colspan="2" rowspan="2">колонка 3</th>
