--- a/table.html
+++ b/table.html
@@ -9,18 +9,16 @@
 </head>
 <body>
     <table frame="box">
-        <caption>таблица 1 для чего-то она нужна это ее название</caption>
+        <caption>НАЗВАНИЕ ТАБЛИЦЫ</caption>
         <tr bgcolor="red">
-            <th colspan="2" rowspan="2">колонка 1</th>
-            <th colspan="2" rowspan="2">колонка 2</th>
-            <th colspan="2" rowspan="2">колонка 3</th>
+            <th>колонка 1</th>
+            <th>колонка 2</th>
+            <th>колонка 3</th>
         </tr>
           <tr>
-              <th>
-                <td bgcolor="purple">11</td>
-                <td bgcolor="green">12</td>
-                <td bgcolor="blue">13</td>
-              </th>
+            <td bgcolor="purple">11</td>
+            <td bgcolor="green">12</td>
+            <td bgcolor="blue">13</td>
           </tr>
         <tr bgcolor="ebebeb">
               <td bgcolor="#fff000">17</td>
