--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+     <link rel="stylesheet" href="STYLE css/Style.css">
      <title>receipt</title>
      <link rel="stylesheet" href="style.css">
  </head>
