--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
      <p><a/href="forms.html">Forms page</a></p>
     <div class="hline"><width:20><height:1px></height:1px></width:20></div>
     <p>MONTE CRISTO STYLE HAM SANDWICH
-        <p>This is a filling sandwich. You could even make it for dinner with a side salad. Or brunch with a sweet glaze.</p>
+     <tr>
+         <td bgcolor="gray">This is a filling sandwich. You could even make it for dinner with a side salad. Or brunch with a sweet glaze</td>
+     </tr> 
     <p>INGREDIENTS</p>
     <ol><li><span .class="color1">4 eggs</span></li>
     <li>1 Tbs (15 mL) milk or water</li>
