--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table frame="box">
+    <table frame="box" rules="all">
         <caption>НАЗВАНИЕ ТАБЛИЦЫ</caption>
         <tr bgcolor="red">
             <th>колонка 1</th>
