--- a/table.html
+++ b/table.html
@@ -16,9 +16,9 @@
             <th>колонка 3</th>
         </tr>
           <tr>
-            <td bgcolor="purple">11</td>
-            <td bgcolor="green">12</td>
-            <td bgcolor="blue">13</td>
+            <td bgcolor="purple" align="center">11</td>
+            <td bgcolor="green" align="center">12</td>
+            <td bgcolor="blue" align="center">13</td>
           </tr>
         <tr bgcolor="ebebeb">
               <td bgcolor="#fff000">17</td>
