--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
         </li>
     </ul>
     <p> INSTRUCTIONS</p>
-    <table>
-
+    <table frame="box" rules="all">
+        <caption bgcolor="light-purple">Calorie Sheet</caption>
+        <td>
+          <th>Sr.No.</th>
+          <th>Food Item</th>
+          <th>Quantlty</th>
+          <th>Calorie Value</th>
+        </td>
     </table>
     <p>NOTES</p>
     <p>Sweet garnish options: bourbon maple syrup glaze and a dusting of powdered sugar
