--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
     </ul>
     <p> INSTRUCTIONS</p>
     <table frame="box" rules="all">
-        <caption bgcolor="light-purple">Calorie Sheet</caption>
-        <td>
+        <caption>Calorie Sheet</caption>
+        <td bgcolor="light-purple">
           <th>Sr.No.</th>
           <th>Food Item</th>
           <th>Quantlty</th>
           <th>Calorie Value</th>
         </td>
+        <td>
+            <th>Boiled eggs</th> <th>1</th> <th>125</th>
+        </td>
+        
     </table>
     <p>NOTES</p>
     <p>Sweet garnish options: bourbon maple syrup glaze and a dusting of powdered sugar
