--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <th>Quantlty</th>
           <th>Calorie Value</th>
         </td>
-        <td>
-            <th>Boiled eggs</th> <th>1</th> <th>125</th>
-        </td>
+      <tr>
+          <td>Boiled eggs</td> <td>1</td> <td>125</td>
+      </tr>
         
     </table>
     <p>NOTES</p>
