--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <th>Calorie Value</th>
         </td>
         <tr>
-          <td>Boiled eggs</td> <td>1</td> <td>125</td>
+          <td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
         </tr>
         
     </table>
