--- a/index.html
+++ b/index.html
@@ -48,15 +48,18 @@
     <p> INSTRUCTIONS</p>
     <table frame="box" rules="all">
         <caption>Calorie Sheet</caption>
-        <td bgcolor="light-purple">
-          <th>Sr.No.</th>
-          <th>Food Item</th>
-          <th>Quantlty</th>
-          <th>Calorie Value</th>
+        <td bgcolor="light-blue">
+           <th>Sr.No.</th>
+           <th>Food Item</th>
+           <th>Quantlty</th>
+           <th>Calorie Value</th>
         </td>
-        <tr>
+         <tr>
           <td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
-        </tr>
+         </tr>
+         <tr>
+             <td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
+         </tr>
         
     </table>
     <p>NOTES</p>
