--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     <p> INSTRUCTIONS</p>
     <table frame="box" rules="all">
         <caption>Calorie Sheet</caption>
-        <td bgcolor="light-blue">
+        <td bgcolor="none">
            <th>Sr.No.</th>
            <th>Food Item</th>
            <th>Quantlty</th>
            <th>Calorie Value</th>
         </td>
          <tr>
-          <td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
+          <td></td><td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
          </tr>
          <tr>
-             <td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
+             <td></td><td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
          </tr>
         
     </table>
