--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     <p> INSTRUCTIONS</p>
     <table frame="box" rules="all">
         <caption>Calorie Sheet</caption>
-        <td>
+        <tr bgcolor="red">
            <th>Sr.No.</th>
            <th>Food Item</th>
            <th>Quantlty</th>
            <th>Calorie Value</th>
-        </td>
-         <tr bgcolor="#F0F8FF">
+        </tr>
+         <tr >
           <td></td><td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
          </tr>
-         <tr bgcolor="#F0F8FF"> 
+         <tr> 
              <td></td><td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
          </tr>
          <tr bgcolor="#F0F8FF">
