--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     <p> INSTRUCTIONS</p>
     <table frame="box" rules="all">
         <caption>Calorie Sheet</caption>
-        <tr bgcolor="red">
+        <tr bgcolor="#F4A460">
            <th>Sr.No.</th>
            <th>Food Item</th>
            <th>Quantlty</th>
            <th>Calorie Value</th>
         </tr>
-         <tr >
+         <tr bgcolor="#F0F8FF">
           <td></td><td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
          </tr>
-         <tr> 
+         <tr bgcolor="#F0F8FF"> 
              <td></td><td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
          </tr>
          <tr bgcolor="#F0F8FF">
