--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
            <th>Calorie Value</th>
         </tr>
          <tr bgcolor="#F0F8FF">
-          <td></td><td>1</td> <td>Boiled eggs</td> <td>1</td> <td>125</td>
+          <td></td>
+          <td align="center">1</td> 
+          <td>Boiled eggs</td> 
+          <td>1</td> 
+          <td>125</td>
          </tr>
          <tr bgcolor="#F0F8FF"> 
              <td></td><td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
