--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          <tr bgcolor="#F0F8FF">
           <td></td>
           <td align="center">1</td> 
-          <td class="orange" text="white">Boiled eggs</td> 
+          <td>Boiled eggs</td> 
           <td>1</td> 
           <td>125</td>
          </tr>
